--- a/NodeDemo/package.json
+++ b/NodeDemo/package.json
@@ -7,6 +7,13 @@
     "start": "http-server"
   },
   "devDependencies": {
-    "http-server": "^0.10.0"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "http-server": "^0.10.0",
+    "jshint": "^2.9.4",
+    "jshint-loader": "^0.8.4",
+    "webpack": "^2.5.0",
+    "webpack-dev-server": "^2.4.5"
   }
 }
