--- a/NodeDemo/NodeDemo.csproj
+++ b/NodeDemo/NodeDemo.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include=".babelrc" />
-    <None Include=".jshintrc" />
+    <None Include=".bu_jshintrc" />
     <None Include="App.config" />
     <None Include="package.json" />
     <None Include="script\login.es6" />
@@ -44,6 +44,7 @@
     <Content Include="node_modules\main.css" />
     <Content Include="script\main.js" />
     <Content Include="script\section1.js" />
+    <Content Include="webpack-production.config.js" />
     <Content Include="webpack.config.js" />
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +53,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
