--- a/NodeDemo/package.json
+++ b/NodeDemo/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server -d"     
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
