--- a/NodeDemo/package.json
+++ b/NodeDemo/package.json
@@ -4,17 +4,31 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "start": "webpack-dev-server -d"     
+    "start": "webpack-dev-server -d"
   },
   "devDependencies": {
+    "autoprefixer": "^7.0.1",
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "http-server": "^0.10.0",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.5",
     "strip-loader": "^0.1.2",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
